@@ -3,6 +3,7 @@ Revision history for the Perl MegaHAL extension.
 0.08_01   Not yet released
         - Fix for RT 107921 (format not a string literal and no format
            arguments)
+        - constant MEGAHAL_H in MegaHAL.xs is useless
 
 0.08 = 0.07_01 2015-04-12
 
